[package]
name = "jup-swap-example"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
jupiter-swap-api-client = { git = "https://github.com/jup-ag/jupiter-swap-api-client.git", package = "jupiter-swap-api-client" }
solana-address-lookup-table-program = "2"
solana-client = "2"
solana-sdk = "2"
tokio = { version = "1", features = ["full"] }